# qspeedreader

./: .gitignore  CMakeLists.txt  LICENCE  LICENSE  README  README.md  colordialog.cpp  colordialog.h  colordialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qspeedreader.pro  settings.cpp  settings.h
.github/workflows/: build.yml
cmake/: FindGit2.cmake  version.cmake
lang/: qspeedreader_de.ts  qspeedreader_en.ts
resources/: org.ballessay.qspeedreader.desktop  resources.qrc
src/: colordialog.cpp  colordialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  version.h.in
